# FairMeta_AI

./: README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
api/: main.py
data/: sample_metadata.csv
reports/json/: 5d79ef81-439a-5d17-8beb-d6aa805419a7.json  90a6b0c1-d6d2-5923-b365-8c8b67360559.json
reports/md/: 5d79ef81-439a-5d17-8beb-d6aa805419a7.md  90a6b0c1-d6d2-5923-b365-8c8b67360559.md
src/fairmeta/: advanced_nlp.py  config.py  enrich.py  fair_scoring.py  ingest.py  kg_integration.py  recommendation.py  report.py  stats_utils.py
src/fairmeta.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fairmeta/harvesters/: ckan.py  zenodo.py
ui/: Home.py
ui/pages/: 1_🌐_Harvest.py  2_📊_Reports.py  3_⚖️_Compare.py  4_🧪_API_Tester.py  5_🧠_Advanced_Metadata.py  6_🎯_Recommendation.py  7_📦_Storage_and_Docs.py  8_📈_Statistics.py
